[package]
name = "FlavorSwapper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
dotenvy = "0.15"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
